fix: change navbar contrast and bg image size

--- a/css/nav.css
+++ b/css/nav.css
@@ -1,6 +1,6 @@
 /* Navigation styling */
 nav a {
-  color: black;
+  color: rgba(245, 245, 245, 0.856);
   font-weight: bold;
   text-decoration: none;
 }
